dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Contact_Person__c.object
<CustomObject>
    <description>Information about Customer Contacts related to Service</description>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Role of the Selected Contact Person</description>
        <inlineHelpText>Role of the Selected Contact Person</inlineHelpText>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Technical User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Representative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relation to Contact Person</description>
        <inlineHelpText>Relation to Contact Person</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contact Persons</relationshipLabel>
        <relationshipName>Service_Contact_Persons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_in_OCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether infdormation about Contact was sent to OCTT</description>
        <inlineHelpText>Indicates whether infdormation about Contact was sent to OCTT</inlineHelpText>
        <label>Created in OCTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Relation to Service Bundle (indicates, that selected Person is Contact for the whole Bundle)</description>
        <inlineHelpText>Relation to Service Bundle (indicates, that selected Person is Contact for the whole Bundle)</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Service Contact Persons</relationshipLabel>
        <relationshipName>Service_Contact_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Relation to Service Component (indicates, that selected Person is Contact for this element of the Bundle)</description>
        <inlineHelpText>Relation to Service Component (indicates, that selected Person is Contact for this element of the Bundle)</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Contact Persons</relationshipLabel>
        <relationshipName>Service_Contact_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Role_For_Service_Bundle__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Autogenerated text with contact role, contact ID and service bundle Id. Have to be unique</description>
        <inlineHelpText>Autogenerated text with contact role, contact ID and service bundle Id. Have to be unique</inlineHelpText>
        <label>Unique Role For Service Bundle</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Role_For_Service_Component__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Autogenerated text with contact role, contact ID and service component Id. Have to be unique.</description>
        <inlineHelpText>Autogenerated text with contact role, contact ID and service component Id. Have to be unique.</inlineHelpText>
        <label>Unique Role For Service Component</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Contact Person</label>
    <nameField>
        <displayFormat>SCP{000000000}</displayFormat>
        <label>Service Contact Person</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contact Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Service</fullName>
        <active>true</active>
        <description>One the fields &quot;Service Bundle&quot; or &quot;Service Component&quot; has to have value and the other has to be empty.</description>
        <errorConditionFormula>NOT(ISBLANK(Service_Bundle__c)) &amp;&amp; NOT(ISBLANK(Service_Component__c)) || ISBLANK(Service_Bundle__c)&amp;&amp; ISBLANK(Service_Component__c)</errorConditionFormula>
        <errorMessage>One the fields &quot;Service Bundle&quot; or &quot;Service Component&quot; has to have value and the other has to be empty.</errorMessage>
    </validationRules>
</CustomObject>